--- a/config/cluster/basic-cluster.yaml
+++ b/config/cluster/basic-cluster.yaml
@@ -29,7 +29,9 @@ spec:
   instances: ${INSTANCES:-1}
 
   # PostgreSQL image
-  imageName: ghcr.io/cloudnative-pg/postgresql:${POSTGRES_VERSION:-16}
+  # In air-gapped environments, override with relocated registry
+  # Example: my-registry.company.com/cloudnative-pg/postgresql:16
+  imageName: ${IMAGE_NAME:-ghcr.io/cloudnative-pg/postgresql:${POSTGRES_VERSION:-16}}
 
   # Bootstrap configuration
   bootstrap:
